# manr

./: Cargo.toml  README.md  config.toml
src/: lib.rs  main.rs
tests/: cli.rs
