[package]
name = "manr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
flate2 = "1"
toml = "0"
serde = { version = "1.0", features = ["derive"] }
bincode2 = "2"
log = "0"
env_logger = "0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
